--- a/settings/settings.json
+++ b/settings/settings.json
@@ -75,6 +75,23 @@
 			"group": "Appearance"
 		},
 		{
+			"id": "background",
+			"label": "Background",
+			"description": "",
+			"type": "color",
+			"defaultValue": "#000000",
+			"group": "Appearance"
+		},
+		{
+			"id": "background",
+			"label": "Background Opacity",
+			"description": "",
+			"type": "number",
+			"defaultValue": "0.85",
+			"step": ".01",
+			"group": "Appearance"
+		},
+		{
 			"id": "hideAfter",
 			"label": "Hide After",
 			"description": "Messages fade after X seconds (0 to disable)",
