--- a/settings/settings.json
+++ b/settings/settings.json
@@ -88,6 +88,8 @@
 			"description": "",
 			"type": "number",
 			"defaultValue": "0.85",
+			"min": 0,
+			"max": 1,
 			"step": ".01",
 			"group": "Appearance"
 		},
