--- a/settings/settings.json
+++ b/settings/settings.json
@@ -153,7 +153,7 @@
 				},
 				{
 					"value": 20,
-					"label": "VIPS, Mods & Broadcaster"
+					"label": "VIPs, Mods & Broadcaster"
 				},
 				{
 					"value": 15,
