--- a/settings/settings.json
+++ b/settings/settings.json
@@ -83,7 +83,7 @@
 			"group": "Appearance"
 		},
 		{
-			"id": "background",
+			"id": "opacity",
 			"label": "Background Opacity",
 			"description": "",
 			"type": "number",
